--- a/emofunk.html
+++ b/emofunk.html
@@ -2,12 +2,19 @@
 <html>
 
 <head>
+
+<style type="text/css">
+	.img{
+		width: 100%;
+		height: 100%
+	}
+</style>
 	
 <title>Title of the document</title>
 </head>
 
 <body>
-The content of the document......
+	<img class="img" src="C:\Users\Rain\Documents\GitHub\emofunk">
 </body>
 
 </html>
