--- a/emofunk.html
+++ b/emofunk.html
@@ -10,11 +10,11 @@
 	}
 </style>
 	
-<title>Title of the document</title>
+<title>Emofunk</title>
 </head>
 
 <body>
-	<img class="img" src="C:\Users\Rain\Documents\GitHub\emofunk">
+	<img class="img" src="https://github.com/8BitRain/emofunk/blob/master/emofunk.jpg">
 </body>
 
 </html>
