--- a/emofunk.html
+++ b/emofunk.html
@@ -5,8 +5,20 @@
 
 <style type="text/css">
 	.img{
-		width: 100%;
-		height: 100%
+		width: 50%;
+		height: 50%
+
+
+	}
+
+	body{
+		background-image: url(https://raw.githubusercontent.com/8BitRain/emofunk/master/emofunk.jpg);
+		background-repeat: no-repeat;
+		background-size: 50%, 100%;
+		-webkit-background-size: cover;
+  		-moz-background-size: cover;
+  		-o-background-size: cover;
+  		background-size: cover;
 	}
 </style>
 	
@@ -14,7 +26,7 @@
 </head>
 
 <body>
-	<img class="img" src="https://github.com/8BitRain/emofunk/blob/master/emofunk.jpg">
+	<!--<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emofunk.jpg"> -->
 </body>
 
 </html>
