--- a/emofunk.html
+++ b/emofunk.html
@@ -44,6 +44,7 @@
 <body>
 	<h1 align="center" font>EMOFUNK</h1>
 	<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emofunk.jpg"> 
+	<img src="https://raw.githubusercontent.com/8BitRain/emofunk/master/glyphicons_social_30_facebook.png">
 </body>
 
 </html>
