--- a/emofunk.html
+++ b/emofunk.html
@@ -3,6 +3,7 @@
 
 <head>
 <link href='http://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 
 <style type="text/css">
 
@@ -17,8 +18,9 @@
 
 	
    	h1{
-   		color: white;
+   		color: gray;
    		font-family: 'Lato', sans-serif;
+   		/*font-family: 'Open Sans', sans-serif;*/
    		font-size: 60px;
    	}
 	body{
@@ -44,7 +46,7 @@
 <body>
 	<h1 align="center" font>EMOFUNK</h1>
 	<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emofunk.jpg"> 
-	<img src="https://raw.githubusercontent.com/8BitRain/emofunk/master/glyphicons_social_30_facebook.png">
+	<img src="https://raw.githubusercontent.com/8BitRain/emofunk/master/64-facebook.png">
 </body>
 
 </html>
