--- a/emofunk.html
+++ b/emofunk.html
@@ -11,8 +11,9 @@
 		display: block;
     	margin-left: auto;
    		margin-right: auto;
-   		-webkit-filter: opacity(30%);
-  		filter: opacity(30%);
+   		-webkit-filter: opacity(40%);
+  		filter: opacity(40%);
+  		opacity: 40%;
   		
    	}
 
@@ -25,7 +26,8 @@
    	}
 	body{
 	
-		background-image: url(https://raw.githubusercontent.com/8BitRain/emofunk/master/black-background.jpg);
+		background-image: url(https://raw.githubusercontent.com/8BitRain/emofunk/master/space.jpg);
+		background-repeat: no-repeat;
 		background-size: cover;
 
 		/*background: 
@@ -45,8 +47,9 @@
 
 <body>
 	<h1 align="center" font>EMOFUNK</h1>
-	<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emofunk.jpg"> 
-	<img src="https://raw.githubusercontent.com/8BitRain/emofunk/master/64-facebook.png">
+	
+ 	<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emofunk.jpg"> 
+	<a href=""><img float="right" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/64-facebook.png"></a>
 </body>
 
 </html>
