Added Body and Head Split image

--- a/emofunk.html
+++ b/emofunk.html
@@ -5,6 +5,11 @@
 <link href='http://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 
+<script type="text/javascript">
+	function splitMind(){
+		var 
+	}
+</script>
 <style type="text/css">
 
 	.img{
@@ -48,7 +53,7 @@
 <body>
 	<h1 align="center" font>EMOFUNK</h1>
 	
- 	<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emofunk.jpg"> 
+ 	<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/EmoFunkBody.png"> 
 	<a href=""><img float="right" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/64-facebook.png"></a>
 </body>
 
