--- a/emofunk.html
+++ b/emofunk.html
@@ -52,8 +52,10 @@
 
 <body>
 	<h1 align="center" font>EMOFUNK</h1>
-	
+
+	<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emoFunkHead.png"> 
  	<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/EmoFunkBody.png"> 
+
 	<a href=""><img float="right" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/64-facebook.png"></a>
 </body>
 
