Added tumblr icon

--- a/emofunk.html
+++ b/emofunk.html
@@ -144,6 +144,7 @@
 <body>
 	<a href=""><img class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/twitter_icon.png"></a>
 	<a href=""><img class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/facebook_icon.png"></a>
+	<a href=""><img class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/tumblr_icon.png"></a> 
 	<a href=""><img class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/soundcloud_icon.png"></a> 
 
 	<h1 align="center" font>EMOFUNK</h1>
