--- a/emofunk.html
+++ b/emofunk.html
@@ -91,6 +91,13 @@
   		z-index: 0;
   		
    	}
+
+   	.video{
+   		display: block;
+   		margin-left: auto;
+   		margin-right: auto;
+   		position: relative;
+   	}
    	.logo{
    		display: inline;
    		opacity: .4;
@@ -165,7 +172,7 @@
 
  	</div>
 
- 		<iframe width="560" height="315" src="//www.youtube.com/embed/VCYND5nS0Os?rel=0" frameborder="0" allowfullscreen></iframe>
+ 		<iframe class="video" width="950" height="315" src="//www.youtube.com/embed/VCYND5nS0Os?rel=0" frameborder="0" allowfullscreen></iframe>
 
 	
 </body>
