--- a/emofunk.html
+++ b/emofunk.html
@@ -97,6 +97,8 @@
    		margin-left: auto;
    		margin-right: auto;
    		position: relative;
+   		visibility: hidden;
+   		z-index: -2;
    	}
    	.logo{
    		display: inline;
@@ -167,12 +169,13 @@
 	<div class="img_container">
 		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emoFunkHead.png" id="head">
 		<img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png" onclick="splitMindDown()" id="play">
+
+ 		<iframe hidden="true" class="video" width="950" height="315" src="//www.youtube.com/embed/VCYND5nS0Os?rel=0" frameborder="0" allowfullscreen></iframe>
 		<!-- <button class="playButton" type="button" onclick="splitMindDown()" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"><img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"> </button> -->
  		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/EmoFunkBody.png" id="body">
 
  	</div>
 
- 		<iframe class="video" width="950" height="315" src="//www.youtube.com/embed/VCYND5nS0Os?rel=0" frameborder="0" allowfullscreen></iframe>
 
 	
 </body>
