--- a/emofunk.html
+++ b/emofunk.html
@@ -26,6 +26,10 @@
 		{
 			element.parentNode.removeChild(element);
 		}
+		if(increment == 0)
+		{
+			document.getElementById("video").style.display = "block";
+		}
 
 		//console.log(increment);
 		increment++;
@@ -93,7 +97,7 @@
    	}
 
    	.video{
-   		display: block;
+   		display: none;
    		margin-left: auto;
    		margin-right: auto;
    		position: relative;
@@ -170,7 +174,7 @@
 		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emoFunkHead.png" id="head">
 		<img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png" onclick="splitMindDown()" id="play">
 
- 		<iframe hidden="true" class="video" width="950" height="315" src="//www.youtube.com/embed/VCYND5nS0Os?rel=0" frameborder="0" allowfullscreen></iframe>
+ 		<iframe id="video" class="video" width="950" height="315" src="//www.youtube.com/embed/VCYND5nS0Os?rel=0" frameborder="0" allowfullscreen></iframe>
 		<!-- <button class="playButton" type="button" onclick="splitMindDown()" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"><img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"> </button> -->
  		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/EmoFunkBody.png" id="body">
 
