Updated video display

--- a/emofunk.html
+++ b/emofunk.html
@@ -36,7 +36,7 @@
 		if(increment == 20)
 		{
 			//console.log("reached");
-			document.getElementById("video").style.display = "block";
+			document.getElementById("video").style.display = "inline";
 			increment = 0;
 			return;
 		}
@@ -103,6 +103,7 @@
    		margin-right: auto;
    		position: relative;
    	}
+
    	.logo{
    		display: inline;
    		opacity: .4;
