--- a/emofunk.html
+++ b/emofunk.html
@@ -36,7 +36,7 @@
 		if(increment == 20)
 		{
 			//console.log("reached");
-			document.getElementById("video").style.display = "inline";
+			document.getElementById("video").style.display = "block";
 			increment = 0;
 			return;
 		}
@@ -174,7 +174,7 @@
 		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emoFunkHead.png" id="head">
 		<img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png" onclick="splitMindDown()" id="play">
 
- 		<iframe id="video" class="video" width="950" height="315" src="//www.youtube.com/embed/VCYND5nS0Os?rel=0" frameborder="0" allowfullscreen></iframe>
+ 		<iframe id="video" class="video" width="950" height="500" src="//www.youtube.com/embed/VCYND5nS0Os?rel=0" frameborder="0" allowfullscreen></iframe>
 		<!-- <button class="playButton" type="button" onclick="splitMindDown()" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"><img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"> </button> -->
  		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/EmoFunkBody.png" id="body">
 
