--- a/emofunk.html
+++ b/emofunk.html
@@ -101,7 +101,7 @@
    		display: none;
    		margin-left: auto;
    		margin-right: auto;
-   		position: relative;
+   		position: absolute;
    	}
 
    	.logo{
@@ -173,7 +173,7 @@
 	<div class="img_container">
 		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emoFunkHead.png" id="head">
 		<img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png" onclick="splitMindDown()" id="play">
-		
+
  		<iframe id="video" class="video" width="950" height="500" src="//www.youtube.com/embed/VCYND5nS0Os?rel=0" frameborder="0" allowfullscreen></iframe>
 		<!-- <button class="playButton" type="button" onclick="splitMindDown()" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"><img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"> </button> -->
  		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/EmoFunkBody.png" id="body">
