--- a/emofunk.html
+++ b/emofunk.html
@@ -39,7 +39,7 @@
 			
 			//Configure the height for the video so it is placed perfectly in between images.
 			var height = 0;
-			for(int i 0; i < increment; i++)
+			for(int i=0; i < increment; i++)
 			{
 				height += 10 + 10;
 			}
