--- a/emofunk.html
+++ b/emofunk.html
@@ -44,6 +44,8 @@
 				height += 10 + 10;
 			}
 			document.getElementById("video").height = height + "px";
+			var currentHeadPos = parseInt(document.getElementById("head").style.top);
+			document.getElementById("video").style.top = currentHeadPos + 475 + 'px';
 			document.getElementById("video").style.display = "block";
 			increment = 0;
 			return;
