More height fixing

--- a/emofunk.html
+++ b/emofunk.html
@@ -45,7 +45,7 @@
 			}
 			document.getElementById("video").height = height + "px";
 			var currentHeadPos = parseInt(document.getElementById("head").style.top);
-			document.getElementById("video").style.top = 475 - currentHeadPos + 'px';
+			document.getElementById("video").style.top = 475 - currentHeadPos - 237.5 + 'px';
 			document.getElementById("video").style.display = "block";
 			increment = 0;
 			return;
