--- a/emofunk.html
+++ b/emofunk.html
@@ -199,10 +199,10 @@
 </head>
 
 <body>
-	<a href=""><img id="twitter"  class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/twitter_icon.png" onmouseover="twitter()"> </a>
-	<a href=""><img id="facebook"  class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/facebook_icon.png" onmouseover="facebook()"></a>
-	<a href=""><img id="tumblr" class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/tumblr_icon.png" onmouseover="tumblr()"></a> 
-	<a href=""><img id="soundcloud" class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/soundcloud_icon.png" onmouseover="soundcloud()"></a> 
+	<a href=""><img id="twitter"  class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/twitter_icon.png" onmouseover="twitter"> </a>
+	<a href=""><img id="facebook"  class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/facebook_icon.png" onmouseover="facebook"></a>
+	<a href=""><img id="tumblr" class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/tumblr_icon.png" onmouseover="tumblr"></a> 
+	<a href=""><img id="soundcloud" class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/soundcloud_icon.png" onmouseover="soundcloud"></a> 
 
 	<h1 align="center" font>EMOFUNK</h1>
 
