--- a/emofunk.html
+++ b/emofunk.html
@@ -84,17 +84,17 @@
 	}
 
 	function twitter(){
-		document.getElementById("twitter").style.opacity = 1;
-		return;
+		document.getElementById("twitter").style.opacity = "1";
+
 	}
 
 	function facebook(){
-		document.getElementById("facebook").style.opacity = 1;
+		document.getElementById("facebook").style.opacity = "1";
 
 	}
 
 	function tumblr(){
-		document.getElementById("tumblr").style.opacity = 1;
+		document.getElementById("tumblr").style.opacity = "1";
 
 	}
 
