--- a/emofunk.html
+++ b/emofunk.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+<link rel="Funk Icon" href="https://raw.githubusercontent.com/8BitRain/emofunk/master/funk.ico">	
 <link href='http://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 
