Udpated video setttings

--- a/emofunk.html
+++ b/emofunk.html
@@ -107,7 +107,7 @@
 	//For future reference you will create a new div and have it unhidden once sean head comes up for video play!
 
 	
-    function onYouTubePlayerReady(ytplayer) {
+    function onYouTubePlayerReady(playerId) {
   		ytplayer = document.getElementById("video");
   		ytplayer.addEventListener("onStateChange", "onytplayerStateChange");
 	}
