--- a/emofunk.html
+++ b/emofunk.html
@@ -113,7 +113,7 @@
 	}
 
 	function onytplayerStateChange(newState) {
-   		alert("Player's new state: " + newState);
+   		console.log("Player's new state: " + newState);
 }
 
 	window.onload = init;
@@ -225,6 +225,7 @@
 		<img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png" onclick="splitMindDown()" id="play">
 
  		<iframe id="video" class="video" width="950" height="490" src="https://www.youtube.com/embed/VCYND5nS0Os?rel=0&showinfo=0&iv_load_policy=3&controls=0&autoplay=0&enablejsapi=1&playerapiid=ytplayer" frameborder="0" allowfullscreen></iframe>
+
 		<!-- <button class="playButton" type="button" onclick="splitMindDown()" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"><img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"> </button> -->
  		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/EmoFunkBody.png" id="body">
 
