--- a/emofunk.html
+++ b/emofunk.html
@@ -48,7 +48,7 @@
 			var currentHeadPos = parseInt(document.getElementById("head").style.top);
 			document.getElementById("video").style.top = 475 - currentHeadPos - 237.5 + 'px';
 			document.getElementById("video").style.display = "block";
-			document.getElementById("video").src = "//www.youtube.com/embed/VCYND5nS0Os?rel=0&showinfo=0&iv_load_policy=3&controls=0&autoplay=1";
+			document.getElementById("video").src = "//www.youtube.com/embed/VCYND5nS0Os?rel=0&showinfo=0&iv_load_policy=3&controls=0&autoplay=1&enablejsapi=1";
 			increment = 0;
 			return;
 		}
