--- a/emofunk.html
+++ b/emofunk.html
@@ -112,7 +112,7 @@
   		ytplayer.addEventListener("onStateChange", "onytplayerStateChange");
 	}
 
-	function onytplayerStateChange(newState) {
+	function onStateChange(newState) {
    		console.log("Player's new state: " + newState);
 }
 
