--- a/emofunk.html
+++ b/emofunk.html
@@ -108,6 +108,7 @@
 
 	
     function onYouTubePlayerReady(playerId) {
+    	alert("page");
   		ytplayer = document.getElementById("video");
   		ytplayer.addEventListener("onStateChange", "onytplayerStateChange");
 	}
