--- a/emofunk.html
+++ b/emofunk.html
@@ -106,7 +106,9 @@
 	}
 	//For future reference you will create a new div and have it unhidden once sean head comes up for video play!
 
-	
+	function onPlayerReady(){
+		alert("ready");
+	}
     function onYouTubePlayerReady(playerId) {
     	alert("page");
   		ytplayer = document.getElementById("video");
