--- a/emofunk.html
+++ b/emofunk.html
@@ -108,7 +108,7 @@
 
 	var player;
 	function onYouTubeIframeAPIReady() {
-		alert("ready");
+		console.log("ready");
   		player = new YT.Player('video', {
     	events: {
       'onReady': onPlayerReady,
