--- a/emofunk.html
+++ b/emofunk.html
@@ -18,17 +18,6 @@
 		imgTop = document.getElementById("head");
 		imgTop.style.top = 50 + 'px';
 		anim = null;
-
-			var player;
-	function onYouTubeIframeAPIReady() {
-		console.log("ready");
-  		player = new YT.Player('video', {
-    	events: {
-      'onReady': onPlayerReady,
-      'onStateChange': onPlayerStateChange
-    	}
-  });
-  		
 	}
 	function splitMindDown(){
 		//Essentially we want to move the image up a few pixels and move the image down a few pixels
@@ -117,7 +106,15 @@
 	}
 	//For future reference you will create a new div and have it unhidden once sean head comes up for video play!
 
-
+	var player;
+	function onYouTubeIframeAPIReady() {
+		console.log("ready");
+  		player = new YT.Player('video', {
+    	events: {
+      'onReady': onPlayerReady,
+      'onStateChange': onPlayerStateChange
+    	}
+  });
 }
 
 	function onStateChange(newState) {
@@ -232,7 +229,7 @@
 		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emoFunkHead.png" id="head">
 		<img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png" onclick="splitMindDown()" id="play">
 
- 		<iframe id="video" class="video" width="950" height="490" src="https://www.youtube.com/embed/VCYND5nS0Os?rel=0&showinfo=0&iv_load_policy=3&controls=0&autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+ 		<iframe id="video" onload = "onYouTubeIframeAPIReady()" class="video" width="950" height="490" src="https://www.youtube.com/embed/VCYND5nS0Os?rel=0&showinfo=0&iv_load_policy=3&controls=0&autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
 
 		<!-- <button class="playButton" type="button" onclick="splitMindDown()" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"><img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"> </button> -->
  		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/EmoFunkBody.png" id="body">
