--- a/emofunk.html
+++ b/emofunk.html
@@ -125,8 +125,8 @@
   });
 }
 
-	function onStateChange(newState) {
-   		console.log("Player's new state: " + newState);
+	function onPlayerStateChange(newEvent) {
+   		console.log("Player's new state: " + newEvent);
 }
 
 	window.onload = init;
