--- a/emofunk.html
+++ b/emofunk.html
@@ -131,6 +131,11 @@
    			alert("omg");
    			console.log("omg");
    		}
+   		else
+   		{
+   			alert("omg");
+   			console.log("omg");
+   		}
 }
 
 	window.onload = init;
