--- a/emofunk.html
+++ b/emofunk.html
@@ -255,6 +255,7 @@
         if (event.data == YT.PlayerState.PLAYING && !done) {
           setTimeout(stopVideo, 6000);
           done = true;
+          alert("finale");
         }
       }
       function stopVideo() {
