--- a/emofunk.html
+++ b/emofunk.html
@@ -6,7 +6,9 @@
 <link href='http://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 
-
+<script>
+      
+</script>
 
 <script type="text/javascript">
 
@@ -107,8 +109,41 @@
 
 	}
 	//For future reference you will create a new div and have it unhidden once sean head comes up for video play!
+	// 2. This code loads the IFrame Player API code asynchronously.
+      var tag = document.createElement('script');
 
-	
+      tag.src = "https://www.youtube.com/iframe_api";
+      var firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+	var player;
+	function onYouTubeIframeAPIReady() {
+		console.log("ready");
+  		player = new YT.Player('video', {
+    	events: {
+    		'onReady': onPlayerReady,
+    		'onStateChange' onPlayerStateChange
+    	}
+  });
+}
+	function onPlayerReady(event) {
+    	console.log("ready - 2");
+    });
+}
+
+	function onPlayerStateChange(event) {
+		console.log(event.data);
+   		if(YT.PlayerState.ENDED == event)
+   		{
+   			alert("omg");
+   			console.log("omg");
+   		}
+   		else
+   		{
+   			alert("omg");
+   			console.log("omg");
+   		}
+}
 
 	window.onload = init;
 
@@ -218,51 +253,7 @@
 		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emoFunkHead.png" id="head">
 		<img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png" onclick="splitMindDown()" id="play">
 
-		 <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-    <div <iframe id="video"  class="video" width="950" height="490" src="https://www.youtube.com/embed/VCYND5nS0Os?rel=0&showinfo=0&iv_load_policy=3&controls=0&autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>></div>
-
-    <script>
-      // 2. This code loads the IFrame Player API code asynchronously.
-      var tag = document.createElement('script');
-
-      tag.src = "https://www.youtube.com/iframe_api";
-      var firstScriptTag = document.getElementsByTagName('script')[0];
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-      // 3. This function creates an <iframe> (and YouTube player)
-      //    after the API code downloads.
-      var player;
-      function onYouTubeIframeAPIReady() {
-        player = new YT.Player('video', {
-          events: {
-            'onReady': onPlayerReady,
-            'onStateChange': onPlayerStateChange
-          }
-        });
-      }
-
-      // 4. The API will call this function when the video player is ready.
-      function onPlayerReady(event) {
-        //event.target.playVideo();
-      }
-
-      // 5. The API calls this function when the player's state changes.
-      //    The function indicates that when playing a video (state=1),
-      //    the player should play for six seconds and then stop.
-      var done = false;
-      function onPlayerStateChange(event) {
-		  alert('state changed');
-        if (event.data == YT.PlayerState.PLAYING && !done) {
-          setTimeout(stopVideo, 6000);
-          done = true;
-          alert("finale");
-        }
-      }
-      function stopVideo() {
-        player.stopVideo();
-      }
-    </script>
- 		
+ 		<iframe id="video"  class="video" width="950" height="490" src="https://www.youtube.com/embed/VCYND5nS0Os?rel=0&showinfo=0&iv_load_policy=3&controls=0&autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
 
 		<!-- <button class="playButton" type="button" onclick="splitMindDown()" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"><img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png"> </button> -->
  		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/EmoFunkBody.png" id="body">
