--- a/emofunk.html
+++ b/emofunk.html
@@ -122,7 +122,7 @@
   		player = new YT.Player('video', {
     	events: {
     		'onReady': onPlayerReady,
-    		'onStateChange' onPlayerStateChange
+    		'onStateChange': onPlayerStateChange
     	}
   });
 }
