--- a/emofunk.html
+++ b/emofunk.html
@@ -53,7 +53,7 @@
 			document.getElementById("video").style.top = 475 - currentHeadPos - 237.5 + 'px';
 			document.getElementById("video").style.display = "block";
 			document.getElementById("video").src = "https://www.youtube.com/embed/VCYND5nS0Os?rel=0&showinfo=0&iv_load_policy=3&controls=0&autoplay=1&enablejsapi=1";
-			
+
 			//For future reference you will create a new div and have it unhidden once sean head comes up for video play!
 			// 2. This code loads the IFrame Player API code asynchronously.
       		var tag = document.createElement('script');
@@ -137,16 +137,11 @@
 	function onPlayerStateChange(event) {
 		console.log("ready-3");
 		console.log(event.data);
-   		if(YT.PlayerState.ENDED == event)
+   		if(YT.PlayerState.ENDED == event.data)
    		{
-   			alert("omg");
-   			console.log("omg");
+   			document.getElementById("video").style.display = "none";
    		}
-   		else
-   		{
-   			alert("omg");
-   			console.log("omg");
-   		}
+   		
 }
 
 	window.onload = init;
