--- a/emofunk.html
+++ b/emofunk.html
@@ -139,7 +139,8 @@
 		console.log(event.data);
    		if(YT.PlayerState.ENDED == event.data)
    		{
-   			document.getElementById("video").style.display = "none";
+   			setTimeout(function(){document.getElementById("video").style.display = "none";}, 2000);
+   			
    		}
    		
 }
