--- a/emofunk.html
+++ b/emofunk.html
@@ -144,6 +144,7 @@
    		if(YT.PlayerState.ENDED == event.data)
    		{
    			setTimeout(function(){document.getElementById("video").style.display = "none";}, 1500);
+   			splitMindReverse();
    			
    		}
    		
