--- a/emofunk.html
+++ b/emofunk.html
@@ -145,7 +145,7 @@
    		{
    			setTimeout(function(){
    				document.getElementById("video").style.display = "none";
-   				document.getElementById("download").style.display = "block"''
+   				document.getElementById("download").style.display = "block";
    				splitMindReverse();
    			}, 1500);
 
