--- a/emofunk.html
+++ b/emofunk.html
@@ -289,14 +289,15 @@
 	<a href="http://seanave.tumblr.com/"><img id="tumblr" class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/tumblr_icon.png" onmouseover="tumblr"></a> 
 	<a href="https://soundcloud.com/sean_avery"><img id="soundcloud" class="logo" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/soundcloud_icon.png" onmouseover="soundcloud"></a> 
 
-	<h1 align="center" font>EMOFUNK</h1>
+	<h1 align="center" >EMOFUNK</h1>
 
 	 
 
 	<div class="img_container">
 		<img class="img" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/emoFunkHead.png" id="head">
 		<img class="playButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/play_button.png" onclick="splitMindDown()" id="play">
-		<img class="downloadButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/dl_icon.png" onclick="splitMindDown()" id="download">
+		<img class="downloadButton" src="https://raw.githubusercontent.com/8BitRain/emofunk/master/dl_icon.png" onclick="revealDownload()" id="download">
+		<h1 align="center"> Available For Downlaod Saturday June 21 </h1>
 
  		<iframe id="video"  class="video" width="950" height="490" src="https://www.youtube.com/embed/VCYND5nS0Os?rel=0&showinfo=0&iv_load_policy=3&controls=1&autoplay=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
 
